--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <h1>{{titulo}}</h1>
-<h2>Información de {{banda.nombre}}!</h2>
+
+<banda-detalle [banda]="banda"></banda-detalle>
 <div>
-  <label>Nombre: </label>
-  <input *ngIf="banda" [(ngModel)]="banda.nombre" placeholder="nombre del grupo">
   <ul class="bandas">
     <li [class.selected]="bandaItem === banda" *ngFor="let bandaItem of bandas" (click)="seleccionar(bandaItem)">
       <span class="insignia">{{bandaItem.id}}</span> {{bandaItem.nombre}}
